examples/test/testpolicy18234.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18234
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key33: value16
      key17: value11
      key15: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value37
          key28: value41
          key40: value20
